# patch-labs

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.Bazel.json  Cargo.toml  LICENSE  WORKSPACE.bazel  crates.bzl  flake.nix
protos/: BUILD.bazel  buf.yaml
protos/google/api/: BUILD.bazel
protos/google/longrunning/: BUILD.bazel  operations.proto
protos/google/rpc/: BUILD.bazel  status.proto
protos/grs/v1/: BUILD.bazel  object.proto  reference.proto  repository.proto  repository_service.proto
protos/pl/api/: BUILD.bazel  id.proto  resource_name.proto  rust.proto
protos/pl/auth/users/: BUILD.bazel  service.proto  users.proto
protos/pl/auth/users/v1/: BUILD.bazel  service.proto  users.proto
rust/: BUILD.bazel  database.rs  resource_name.rs
rust/api/: BUILD.bazel  resource_name.rs  status.rs
rust/database/: BUILD.bazel  collection.rs  counter.rs  error.rs  lib.rs  range.rs  storage.rs
rust/database/layers/: BUILD.bazel  collection.rs
rust/database/storage/: BUILD.bazel  memory.rs
rust/database/storages/: BUILD.bazel  foundationdb.rs
rust/database/storages/sled/: BUILD.bazel  lib.rs  transaction.rs
rust/libs/: BUILD.bazel  id.rs  resource_name.rs
