[package]
name = "foo"
version = "0.0.0"

[lib]
path = "rust/api/resource_name.rs"

[dependencies]
argh = "0.1.10"
async-trait = "0.1.68"
bytes = "1.4.0"
futures-util = "0.3.28"
glommio = "0.8.0"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
sled = "0.34.7"
tokio = "1.28.1"
tonic-build = "0.9.2"

[dependencies.foundationdb]
default-features = false
features = [
  "fdb-7_1",
  "embedded-fdb-include"
]
version = "0.7.0"

[dependencies.hyper]
features = ["http2", "server"]
version = "0.14.26"

[dependencies.smallvec]
features = ["const_generics", "union"]
version = "1.10.0"

[dependencies.tonic]
default-features = false
features = [
  "prost",
  "tls",
  "tls-webpki-roots",
  "transport",
  "codegen"
]
version = "0.9.2"

[dependencies.uuid]
features = ["v7"]
version = "1.3.2"

[dev-dependencies]
mockall = "0.11.4"
