load("@rules_buf//buf:defs.bzl", "buf_breaking_test")

exports_files(["buf.yaml"])

buf_breaking_test(
    name = "breaking_test",
    against = "testdata/image.bin",
    config = "buf.yaml",
    targets = [
        "//protos/google/api:field_behavior_proto",
        "//protos/google/api:resource_proto",
        "//protos/google/longrunning:operations_proto",
        "//protos/google/rpc:error_details_proto",
        "//protos/google/rpc:status_proto",
        "//protos/grs/v1:repository_proto",
        "//protos/grs/v1:repository_service_proto",
    ],
)
