load("//build/bazel/rust:library.bzl", "pl_rust_library")

package(default_visibility = ["//visibility:public"])

pl_rust_library(
    name = "resource_name",
    srcs = ["resource_name.rs"],
    deps = [
        "//third-party/crates:prost",
        "//third-party/crates:smallvec",
    ],
)

pl_rust_library(
    name = "status",
    srcs = ["status.rs"],
    deps = [
        "//protos/google/rpc:rpc_rust",
        "//third-party/crates:prost",
        "//third-party/crates:prost-types",
        "//third-party/crates:tonic",
    ],
)
