load("//build/bazel/rust:library.bzl", "pl_rust_library")

package(default_visibility = ["//rust:__subpackages__"])

pl_rust_library(
    name = "database",
    srcs = glob(["lib.rs"]),
    # FIXME: add tests for this target
    create_test_target = False,
    proc_macro_deps = [
        "//third-party/crates:async-trait",
    ],
    deps = [
        "//rust/api:resource_name",
        "//third-party/crates:bytes",
        "//third-party/crates:foundationdb",
        "//third-party/crates:prost",
        "//third-party/crates:sled",
    ],
)

pl_rust_library(
    name = "error",
    srcs = ["error.rs"],
    create_test_target = False,
)
