load("//build/bazel/rust:library.bzl", "pl_rust_library")

package(default_visibility = ["//rust:__subpackages__"])

pl_rust_library(
    name = "database",
    srcs = glob(["lib.rs"]),
    # TODO: add tests for this.
    #
    # Needs an error type that we can use in tests.
    create_test_target = False,
    proc_macro_deps = [
        "//third-party/crates:async-trait",
    ],
    test_deps = ["//third-party/crates:tokio"],
    deps = [
        ":error",
        "//rust/api:resource_name",
        "//rust/database/storages/sled",
        "//third-party/crates:bytes",
        "//third-party/crates:foundationdb",
        "//third-party/crates:prost",
        "//third-party/crates:sled",
    ],
)

pl_rust_library(
    name = "error",
    srcs = ["error.rs"],
    create_test_target = False,
)
