load("//build/bazel/proto:library.bzl", "pl_proto_library")

pl_proto_library(
    name = "operations_proto",
    srcs = ["operations.proto"],
    disable_lint = True,
    visibility = ["//protos:__subpackages__"],
    deps = [
        "//protos/google/rpc:status_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)
