load("//build/bazel/proto:library.bzl", "pl_proto_library")
load("//build/bazel/rust:grpc.bzl", "pl_rust_grpc_library")

pl_rust_grpc_library(
    name = "grpc",
    protos = [":operations_proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//third-party/crates:tonic-types",
    ],
)

pl_proto_library(
    name = "operations_proto",
    srcs = ["operations.proto"],
    disable_lint = True,
    visibility = ["//protos:__subpackages__"],
    deps = [
        "//protos/google/rpc:status_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)
