load("//build/bazel/proto:library.bzl", "pl_proto_library")

pl_proto_library(
    name = "status_proto",
    srcs = ["status.proto"],
    disable_lint = True,
    visibility = ["//protos:__subpackages__"],
    deps = [
        "//protos/pl/api:rust_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

pl_proto_library(
    name = "error_details_proto",
    srcs = ["error_details.proto"],
    disable_lint = True,
    visibility = ["//protos:__subpackages__"],
    deps = [
        "@com_google_protobuf//:duration_proto",
    ],
)
