load("//build/bazel/rust:library.bzl", "pl_rust_library")

pl_rust_library(
    name = "foundationdb",
    srcs = ["foundationdb.rs"],
    visibility = ["//rust/database:__pkg__"],
    deps = [
        "//rust/database:error",
        "//third-party/crates:foundationdb",
        "//third-party/crates:futures-util",
    ],
)
