load("//build/bazel/rust:library.bzl", "pl_rust_library")

pl_rust_library(
    name = "sled",
    srcs = [
        "lib.rs",
        "transaction.rs",
    ],
    test_deps = [
        "//third-party/crates:tokio",
    ],
    visibility = ["//rust/database:__pkg__"],
    deps = [
        "//rust/database:error",
        "//third-party/crates:foundationdb",
        "//third-party/crates:sled",
    ],
)
