load("//build/bazel/proto:library.bzl", "pl_proto_library")
load("//build/bazel/rust:grpc.bzl", "pl_rust_grpc_library")
load("//build/bazel/rust:proto.bzl", "pl_rust_proto_library")

package(default_visibility = ["//protos:__subpackages__"])

pl_proto_library(
    name = "users_proto",
    srcs = ["users.proto"],
    deps = [
        "//protos/pl/api:resource_name",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

pl_proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    deps = [":users_proto"],
)

pl_rust_proto_library(
    name = "users_rust",
    protos = [":users_proto"],
    deps = [
        "//rust:resource_name",
    ],
)
#
#pl_rust_grpc_library(
#    name = "service_rust",
#    protos = [":service_proto"],
#    rust_deps = [":users_rust"],
#)
